# gel

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakePresets.json.old  README.md  build.json  vcpkg-configuration.json  vcpkg.json
Benchmarks/: CMakeLists.txt  main.cc
Benchmarks/gel/: bm_factorial.cc  bm_parser.cc
Sources/: CMakeLists.txt  bindings_env.cc  bindings_test.cc  main.cc  scm.cc  test_plugin.cc  test_repl.cc
Sources/gel/: argument.h  array.cc  array.h  assembler.h  assembler_base.cc  assembler_base.h  assembler_vm.cc  assembler_vm.h  bitfield.h  buffer.cc  buffer.h  bytecode.cc  bytecode.h  class.cc  class.h  collector.cc  collector.h  common.h  compactor.h  disassembler.cc  disassembler.h  disassembler_vm.cc  disassembler_vm.h  error.cc  error.h  event_loop.cc  event_loop.h  expression.cc  expression.h  expression_compiler.cc  expression_compiler.h  expression_dot.cc  expression_dot.h  flags.cc  flags.h  flow_graph.cc  flow_graph.h  flow_graph_builder.cc  flow_graph_builder.h  flow_graph_compiler.cc  (+102 more)
Sources/scheme/: argument.h  array.cc  array.h  ast.cc  ast.h  ast_dot.cc  ast_dot.h  ast_printer.cc  ast_printer.h  ast_renderer.cc  ast_renderer.h  bitfield.h  collector.cc  collector.h  common.h  compactor.h  disassembler.cc  disassembler.h  environment.cc  environment.h  error.cc  error.h  expression.cc  expression.h  expression_compiled.cc  expression_compiled.h  expression_compiler.cc  expression_compiler.h  expression_dot.cc  expression_dot.h  flags.cc  flags.h  flow_graph.cc  flow_graph.h  flow_graph_builder.cc  flow_graph_builder.h  flow_graph_dot.cc  flow_graph_dot.h  gv.cc  gv.h  (+83 more)
Tests/: CMakeLists.txt  main.cc
Tests/gel/: local_assertions.h  mock_local_scope.h  mock_type_visitor.h  test_assembler_vm.cc  test_bool.cc  test_flow_graph.cc  test_interpreter.cc  test_local.cc  test_local_scope.cc  test_parser.cc  test_runtime.cc  type_assertions.h
Tests/scheme/: local_assertions.h  mock_local_scope.h  mock_type_visitor.h  test_bool.cc  test_environment.cc  test_flow_graph.cc  test_interpreter.cc  test_lexer.cc  test_local.cc  test_local_scope.cc  test_number.cc  test_parser.cc  test_runtime.cc  type_assertions.h
cmake/: ClangTidy.cmake  Doxygen.cmake  FindGraphviz.cmake  Options.cmake
gel/: _kernel.cl  apply-print.cl  countdown.cl  rx.cl  say-hello.cl  test-docstring.cl  test-error-value.cl  test-namespaces.cl  test-new.cl  test-observable.cl  test-observer.cl
gel/lib/: array.cl  env.cl  fs.cl  math.cl  test.cl  uv.cl
scm/: _kernel.cl  apply-print.cl  core.ss  countdown.cl  factorial.cl  kernel.ss  math.ss  set-car.cl  test-cast.cl  test-instanceof.cl  test-let.cl  test-observable.cl  test-only.cl  test-publish-subject.cl  test.ss  while.cl
scripts/: countdown.cl  factorial.cl  say-hello.cl  test-array.cl  test-cast.cl  test-dispatch.cl  test-dlopen.cl  test-docstring.cl  test-instanceof.cl  test-interval.cl  test-let.cl  test-macro.cl  test-match.cl  test-mkdir.cl  test-namespaces.cl  test-observable.cl  test-observer.cl  test-only.cl  test-optional.cl  test-print.cl  test-publish-subject.cl  test-stat.cl  test-struct.cl  test-timeout.cl  test-uv-loop.cl
